[project]
name = "neurobagel-api"
dynamic = ["version"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi[standard]",
    "pydantic>=2.10,<3",
    "pydantic-settings",
    "pandas",
    "numpy",
    "PyJWT",
    "typing-extensions",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "pytest-cov",
    "pre-commit"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
filter_files = true
line_length = 79

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_redundant_casts = true
show_error_codes = true
pretty = true